ゼミの活動内容を追加

--- a/works.html
+++ b/works.html
@@ -34,6 +34,9 @@
           <tr>
             <th>ゼミナールⅠ研究課題</th>
             <td>わかばちゃんと学ぶGit使い方入門</td>
+          </tr>
+          <tr>
+            <th>ゼミナールⅢ研究課題</th>
           </tr>    
         </tbody>
       </table>
