ゼミの滑動内容をさらに追加

--- a/works.html
+++ b/works.html
@@ -37,6 +37,7 @@
           </tr>
           <tr>
             <th>ゼミナールⅢ研究課題</th>
+            <td>コミットを一つにまとめるためのサンプルデータ</td>
           </tr>    
         </tbody>
       </table>
