--- a/works.html
+++ b/works.html
@@ -37,7 +37,7 @@
           </tr>
           <tr>
             <th>ゼミナールⅢ研究課題</th>
-            <td>コミットを一つにまとめるためのサンプルデータ</td>
+            <td>コミットを一つにまとめるためのサンプルデータをつくる</td>
           </tr>    
         </tbody>
       </table>
